kubernetes/mqtt-mosquitto.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mosquitto
  namespace: mqtt-mosquitto
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: mosquitto
        component: mqtt-mosquitto
    spec:
      containers:
      - name: mqtt-mosquitto
        image: Madrum-X/mqtt-mosquitto:2.0.10
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 0.5
            memory: 500Mi
        ports:
        - containerPort: 9001
        - containerPort: 8883
        volumeMounts:
        - name: mosquitto-pv
          mountPath: /srv/mqtt/config
        - name: mosquitto-data-pv
          mountPath: /srv/mqtt/data
        - name: mosquitto-log-pv
          mountPath: /srv/mqtt/log
      volumes:
      - name: mosquitto-pv
        persistentVolumeClaim:
          claimName: mosquitto-pvc
      - name: mosquitto-data-pv
        persistentVolumeClaim:
          claimName: mosquitto-data-pvc
      - name: mosquitto-log-pv
        persistentVolumeClaim:
          claimName: mosquitto-log-pvc
      imagePullSecrets:
        - name: acr-auth
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: mqtt-mosquitto
  labels:
    app: mosquitto
    component: mosquitto-web
spec:
  selector:
    app: mosquitto
    component: mosquitto-web
  ports:
  - name: mosquitto
    port: 1883
  - name: mosquitto-web
    port: 80
    targetPort: 9001
  type: LoadBalancer
