kubernetes/mqtt-mosquitto.replicationcontroller.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  labels:
    app: mosquitto
    kubernetes.io/name: "mosquitto"
spec:
  selector:
    app: mosquitto
  ports:
  - name: mosquitto
    port: 1883
  - name: mosquitto-web
    port: 80
    targetPort: 9001
